# DRF-api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: admin.py  serializers.py  urls.py  views.py
api/management/commands/: init_admin.py
api/migrations/: 0001_initial.py
api/tests/: base.py  test_admin.py  test_user.py
api/tests/factories/: base.py  user.py
src/: settings.py  urls.py
